--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@tanstack/react-table": "^8.9.3",
     "@uiw/codemirror-theme-xcode": "^4.19.11",
-    "@uiw/react-codemirror": "^4.19.11",
+    "@uiw/react-codemirror": "^4.21.9",
     "@vercel/analytics": "^0.1.11",
     "autosize": "^6.0.1",
     "d3-dsv": "^2.0.0",
@@ -42,6 +43,7 @@
     "next": "^13.3.0",
     "next-auth": "^4.20.1",
     "npm": "^9.6.3",
+    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.7",
