--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.319.0",
     "@aws-sdk/s3-presigned-post": "^3.319.0",
+    "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/next-js": "^2.0.1",
     "@chakra-ui/react": "^2.5.2",
     "@chakra-ui/theme-tools": "^2.0.17",
